<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Store App</string>


    <string-array name="arr_lang" tools:ignore="InconsistentArrays">
        <item>English</item>
        <item>Hindi</item>
  </string-array>
    <string name="rename">Rename</string>
    <string name="change_price">Change Price</string>
    <string name="make_out_stock">Out of Stock</string>
    <string name="delete_product">Delete Product</string>
    <string name="rename_your_product">Rename Your Product</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="need_an_account">Need An Account ? </string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="store_name">Store Name</string>
    <string name="store_category">Store Category</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="please_enter_otp_sent_to_your_mobile">Please Enter Otp Sent to Your Mobile</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="have_an_account">Have An Account ?</string>
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_description">Product Description</string>
    <string name="selling_price">Selling Price</string>
    <string name="add_photos">Add Photos</string>
    <string name="message_permission_required">Permission Required</string>
    <string name="please_add_product_to_your_store">Please Add Product to your Store</string>
    <string name="add_your_store">Add Your Store</string>
    <string name="add_picture_of_your_store">Add Picture Of Your Store</string>
    <string name="unit">Unit</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="payment_status">Payment Status : </string>
    <string name="on_delivery">On-Delivery</string>
    <string name="delivery_status">Delivery Status : </string>
    <string name="store_info">Store Info</string>
    <string name="my_orders">My Orders</string>
    <string name="add_store">Add Store</string>
    <string name="add_product">Add Product</string>
    <string name="my_store_info">My Store Info</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="share_your_store_qr_code_or_msid">Share Your Store QR Code or MSID</string>
    <string name="add_your_product">Add Your Product</string>
    <string name="please_provide_your_store_info">Please Provide Your Store Info</string>
    <string name="all_order">All Order</string>
    <string name="welcome_to_your_store">WELCOME TO YOUR STORE</string>
    <string name="search_item">Search Item</string>
    <string name="my_stores">My Stores</string>
    <string name="all_products">All Products</string>
    <string name="create_your_own_store">CREATE YOUR OWN STORE</string>
    <string name="create_an_account">Create an Account</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_files">Open Files</string>
    <string name="qr_code">QR Code</string>
    <string name="total_order">Total \nOrder</string>
    <string name="total_earning">Total \nEarning</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="_continue_">Continue</string>
    <string name="choose_lang">Choose Language</string>
</resources>