<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.splash.SplashActitvity">

        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/convergence"
            android:text="@string/create_your_own_store"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cv_login"
            app:drawableEndCompat="@drawable/ic_shop"
            app:layout_constraintEnd_toEndOf="@id/cv_login"
            app:layout_constraintStart_toStartOf="@id/cv_login"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_box_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25sp"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:text="@string/create_an_account"
                    android:textAlignment="center"
                    android:textColor="#071BD1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="#071BD1"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/label_login" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_line">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_useranme"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5sp"
                        android:hint="@string/mobile_no"
                        android:textColorHint="@color/color_primary"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/color_primary"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="12sp"
                            android:textColorHighlight="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5sp"
                        android:hint="@string/password"
                        android:textColorHint="@color/color_primary"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/color_primary"
                        app:passwordToggleEnabled="true"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="12sp"
                            android:textColorHighlight="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_cn_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10sp"
                        android:hint="@string/confirm_password"
                        android:textColorHint="@color/color_primary"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/color_primary"
                        app:passwordToggleEnabled="true"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_cn_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="12sp"
                            android:textColorHighlight="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_box_layout_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25sp"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:text="@string/please_enter_otp_sent_to_your_mobile"
                    android:textAlignment="center"
                    android:textColor="#071BD1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <LinearLayout
                    android:id="@+id/linearLayout_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_otp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_otp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5sp"
                        android:hint="@string/enter_otp"
                        android:textColorHint="@color/color_primary"
                        android:visibility="visible"
                        app:boxStrokeColor="@color/color_primary"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="12sp"
                            android:textColorHighlight="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:padding="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/resend_otp"
                        android:fontFamily="@font/convergence"
                        android:textAlignment="viewStart"
                        android:textColor="@color/color_primary"/>


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_get_otp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_shape"
            android:elevation="3dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/cv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_login" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_signup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_shape"
            android:elevation="3dp"
            android:visibility="gone"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/cv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_login" />


        <TextView
            android:id="@+id/label_need_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/convergence"
            android:text="@string/have_an_account"
            android:textAlignment="viewEnd"
            android:textColor="@color/color_primary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_signup" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/convergence"
            android:text="@string/signin"
            android:textColor="@color/color_primary"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_need_account"
            app:layout_constraintTop_toBottomOf="@id/bt_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
