<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.delivery_current.MyOrderActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bt_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_back"
                android:backgroundTint="#252D75"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/convergence"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/my_orders"
                android:textAlignment="center"
                android:textColor="@color/color_primary"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bt_back"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:id="@+id/filter_scroll"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_toolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_all_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:background="@color/color_primary"
                    android:fontFamily="@font/convergence"
                    android:padding="7dp"
                    android:text="@string/all_order"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_completed_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:fontFamily="@font/convergence"
                    android:padding="7dp"
                    android:gravity="center"
                    android:text="@string/completed"
                    android:textAlignment="center"
                    android:textColor="@color/color_primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_pending_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:fontFamily="@font/convergence"
                    android:padding="7dp"
                    android:gravity="center"
                    android:text="@string/pending"
                    android:textAlignment="center"
                    android:textColor="@color/color_primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="1sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="1sp"
            android:layout_marginBottom="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_scroll" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
